Fix layot and scroll bugs on mobile; improve task wrapping and spacing

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-html,
-body {
-  height: 100%;
-  width: 100%;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -13,26 +7,31 @@ body {
 
 body {
   background: linear-gradient(to right, #fff, #000);
-  justify-content: center;
-  align-items: flex-start;
-  min-height: 100vh;
+  overflow: hidden;
 }
 
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow-y: scroll;
 }
 .todo {
+  margin-top: 15vh;
   padding: 1.5rem 3rem 4rem 3rem;
-  display: column;
+  display: flex;
+  flex-direction: column;
   color: white;
   border: 2px solid white;
   border-radius: 10px;
   background: rgba(255, 255, 255, 0.205);
   backdrop-filter: blur(10px);
   box-shadow: 0 25px 45px rgba(0, 0, 0, 0.5);
+  scroll-behavior: smooth;
+  margin-bottom: 10vh;
+  margin: 15vh 1rem 10vh 1rem;
 }
 
 .header > img {
@@ -54,6 +53,7 @@ body {
   width: 100%;
   align-items: center;
   margin-bottom: 1rem;
+  justify-content: center;
 }
 
 #input-box {
@@ -88,11 +88,13 @@ body {
   list-style: none;
   font-weight: 500;
   margin-top: 1rem;
+  max-width: 90vw;
+  text-align: center;
 }
 
 .list-container > li {
   font-size: 0.8rem;
-  padding: 0.5rem;
+  padding: 0.5rem 3rem 0.5rem 0.5rem;
   background: rgba(255, 255, 255, 0.205);
   backdrop-filter: blur(10px);
   box-shadow: 0 25px 45px rgba(0, 0, 0, 0.5);
@@ -101,6 +103,12 @@ body {
   flex-wrap: wrap;
   margin: 1rem 0;
   align-self: center;
+  position: relative;
+}
+
+ul li span {
+  right: 0.5rem;
+  top: 0.5rem;
 }
 
 .list-container > li::before {
@@ -154,4 +162,27 @@ ul li span:hover {
   color: rgb(233, 79, 1);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 353px) {
+  .task {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .task > button {
+    width: min-content;
+    margin-top: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 545px) {
+  .list-container {
+    position: relative;
+  }
+  .list-container > li::before {
+    height: 0;
+    width: 0;
+  }
 }
